# Quantum-Secret-Sharing-Simulator

./: CITATION.cff  README.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  release.yml
components/: bloch.py  circuit_drawer.py  metrics_bar.py  phase_panel.py  sidebar.py  wigner.py
docs/: api_reference.md  theory.md
notebooks/: walkthrough.ipynb
pages/: __init__.py  benchmark.py  circuit_view.py  eve_attack.py  n_node_scale.py  optical_replica.py  protocol_lab.py
qss/: __init__.py  cache.py  circuit.py  eavesdropper.py  ghz.py  metrics.py  noise.py  protocol.py  tittel2000.py
tests/: conftest.py  test_eavesdropper.py  test_ghz.py  test_metrics.py  test_noise.py  test_protocol.py  test_tittel2000.py
